pagespeed insights: mobile performance: make sure text remains visible during page load

--- a/assets/css/_addon/module.scss
+++ b/assets/css/_addon/module.scss
@@ -39,6 +39,7 @@
 
 %heading {
   font-family: 'Lato', 'Microsoft Yahei', sans-serif;
+  font-display: swap;
 }
 
 %section {
@@ -99,4 +100,5 @@
   font-size: $font-size;
   font-weight: $font-weight;
   font-family: 'Roboto Condensed', 'Microsoft Yahei', sans-serif;
+  font-display: sawp;
 }
