--- a/assets/css/archives.scss
+++ b/assets/css/archives.scss
@@ -20,6 +20,7 @@
 
 %date-font {
   font-family: 'Roboto Condensed', sans-serif;
+  font-display: swap;
 }
 
 #archives {
@@ -101,6 +102,7 @@
     &.day {
       font-size: 85%;
       font-family: 'Lato', sans-serif;
+      font-display: swap;
       text-align: center;
       margin-right: -2px;
       width: 1.2rem;
