--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -68,6 +68,7 @@
     border-radius: 50%;
     border: 1px solid var(--btn-paginator-border-color);
     font-family: 'Lato', sans-serif;
+    font-display: swap;
     background-color: var(--button-bg);
   }
   &.active {
