--- a/assets/css/tags.scss
+++ b/assets/css/tags.scss
@@ -21,5 +21,6 @@
     margin-left: 0.6em;
     font-size: 0.7em;
     font-family: 'Oswald', sans-serif;
+    font-display: swap;
   }
 }
